--- a/FibonacciSequenceAuthor.DomainServices/FibonacciSequenceAuthor.DomainServices.csproj
+++ b/FibonacciSequenceAuthor.DomainServices/FibonacciSequenceAuthor.DomainServices.csproj
@@ -5,19 +5,20 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentValidation" Version="10.3.6"/>
-        <PackageReference Include="MediatR" Version="10.0.1"/>
-        <PackageReference Include="MediatR.Contracts" Version="1.0.1"/>
-        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0"/>
+        <PackageReference Include="FluentValidation" Version="10.3.6" />
+        <PackageReference Include="MediatR" Version="10.0.1" />
+        <PackageReference Include="MediatR.Contracts" Version="1.0.1" />
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\FibonacciSequenceAuthor.Domain\FibonacciSequenceAuthor.Domain.csproj"/>
-        <ProjectReference Include="..\FibonacciSequenceAuthor.ExternalServices\FibonacciSequenceAuthor.ExternalServices.csproj"/>
-        <ProjectReference Include="..\FibonacciSequenceAuthor.GenericSubdomain\FibonacciSequenceAuthor.GenericSubdomain.csproj"/>
+        <ProjectReference Include="..\FibonacciSequenceAuthor.Domain\FibonacciSequenceAuthor.Domain.csproj" />
+        <ProjectReference Include="..\FibonacciSequenceAuthor.ExternalServices\FibonacciSequenceAuthor.ExternalServices.csproj" />
+        <ProjectReference Include="..\FibonacciSequenceAuthor.GenericSubdomain\FibonacciSequenceAuthor.GenericSubdomain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
